# bmr_pdf-server

./: .gitignore  Dockerfile  convert.py  extract.py  extract_desp.py  extract_ec.py  generate.py  main.py  pyproject.toml  server.py  utils.py
