[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "fastapi-cli>=0.0.27",
    "gunicorn>=26.0.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
    "weasyprint>=69.0",
    "xlsxwriter>=3.2.9",
]
